multicluster-gke/vm-migration/productcatalog-gke/service-cluster2.yaml
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-gke
spec:
  ports:
  - name: grpc
    port: 3550
    targetPort: 3550
  selector:
    app: productcatalogservice-gke
  type: ClusterIP
