multicluster-gke/vm-migration/productcatalog-gke/vs-100-cluster1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalog-migration
spec:
  hosts:
    - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
      weight: 100
    - destination:
        host: productcatalogservice-gke.default.global
      weight: 0
