multicluster-gke/vm-migration/productcatalog-gke/vs-20-cluster2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalog-migration
spec:
  hosts:
    - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
      weight: 80
    - destination:
        host: productcatalogservice-gke
      weight: 20
